--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,5 @@ repo_name: 'jacow-org/docs-TM'
 repo_url: 'https://github.com/jacow-org/docs-TM'
 nav:
   - Introduction: index.md
+  - CAT: cat.md
 
